# daguerreo

./: LICENSE.txt  README.txt  ThirdParty.txt
src/: CMakeLists.txt  CMakeLists_Example.txt  ExLib_LibPNG.h  ExLib_ZLIB.h  ExLib_ZipArchiver.h  ExampleAsynchronousZipFile.h  ExampleZippedPNGs.h  PNGReadStream.h  PNGReader.cpp  PNGReader.h  PNGWriter.cpp  PNGWriter.h  ZipFileInflate.cpp  ZipFileInflate.h  main.cpp
src/Algorithms_NTree/: CMakeLists.txt  ExLib_MetaProgramming.h  ExLib_RuntimeType.h  HasSetParent.h  NTree.cpp  NTree.h  NTreeDynamicOrdered.h  NTreeDynamicUnordered.h  NTreeLeaf.h  NTreeStaticOrdered.h  NTreeStaticUnordered.h  NTreeWithParent.h  NTree_LIB.h
src/Animation_SkeletalAnimation/: CMakeLists.txt  ExLib_SceneBase.h  RotationKey.h  ScaleKey.h  SkeletalAnimation.h  SkeletalAnimationSampler.cpp  SkeletalAnimationSampler.h  SkeletalAnimation_LIB.h  TransformAnimation.cpp  TransformAnimation.h  TranslationKey.h  Uncompressed_JointChannel.cpp  Uncompressed_JointChannel.h  Uncompressed_SkeletalAnimation.cpp  Uncompressed_SkeletalAnimation.h  Uncompressed_SkeletalAnimationSampler.cpp  Uncompressed_SkeletalAnimationSampler.h
src/Assets_Assimp/: CMakeLists.txt
src/Assets_Converter/: ApplicationLoop.h  AssetsConverter_LIB.h  AssimpResources.cpp  AssimpResources.h  AssimpResources_Tests.cpp  AssimpResources_Tests.h  AssimpResources_TestsFX.cpp  AssimpSceneData.cpp  AssimpSceneData.h  AssimpScenePrinter.cpp  AssimpScenePrinter.h  CMakeLists.txt  Converter.cpp  Converter.h  DebugDisplaySkeleton.cpp  DebugDisplaySkeleton.h  ExLib_Asserts.h  ExLib_Assimp.h  ExLib_BinaryFileStream.h  ExLib_BoundCreation.h  ExLib_Eigen.h  ExLib_FileSystem.h  ExLib_FloatDataAccessor.h  ExLib_GraphicsRegistryBase.h  ExLib_GraphicsRegistryFX.h  ExLib_LibPNG.h  ExLib_RenderResources.h  ExLib_Renderer.h  ExLib_RendererSG.h  ExLib_SceneRegistryBase.h  ExLib_SkeletalAnimation.h  ExLib_Skeleton.h  Example_AssimpMesh.h  Example_EffectSkinning.h  MeshViewer_MaterialData.h  MeshViewer_MatrixBufferData.h  PNGWriting.cpp  RendererBaseMesh.h
src/Core_FileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  FileSystem_LIB.h  FileSystem_MACOSX.cpp  FileSystem_MACOSX_Cocoa.h  FileSystem_MACOSX_Cocoa.m  FileSystem_WINDOWS.cpp  FileSystems_LINUX.cpp
src/Core_FloatDataAccessor/: CMakeLists.txt  FData.h  FloatDataAccessor.cpp  FloatDataAccessor.h  FloatDataAccessor_LIB.h
src/Core_Include/: CMakeLists.txt  Core_Assert.cpp  Core_Assert.h  Core_AsynchronousFile.h  Core_AutoPointer.h  Core_Bitfield.h  Core_ByteArray.h  Core_DoubleTimer.cpp  Core_DoubleTimer.h  Core_EndianAbstractor.h  Core_Exception.cpp  Core_Exception.h  Core_FastMutex.h  Core_FixedArray.h  Core_Logging.h  Core_MemoryMonitor.cpp  Core_MemoryMonitor.h  Core_ObjectFactory.h  Core_RTTI.cpp  Core_RTTI.h  Core_RandGen.cpp  Core_RandGen.h  Core_RefCountPointer.h  Core_ScopedThread.h  Core_Semaphore.h  Core_StaticAssert.h  Core_StaticTypeCheck.h  Core_SynchronousFileIO.h  Core_TinyThread.cpp  Core_TinyThread.h  Core_TypeEmpty.h  Core_TypeFromInt.h  Core_TypeFromType.h  Core_TypeList.h  Core_TypeNull.h  Core_TypeSelect.h  Core_cstr.h  README.txt
src/Core_MemoryAllocators/: AlignedAllocator.cpp  AlignedAllocator.h  CMakeLists.txt  DefaultAllocator.h  MemoryAllocator.h  MemoryManagement_LIB.h  PoolAllocator.cpp  PoolAllocator.h  STLMallocAllocator.h  StackAllocator.cpp  StackAllocator.h
src/Core_Serialization/: ArraySerializer.h  CMakeLists.txt  STLSerializer.h  Serializable.h  Serialization_LIB.h  Stream.cpp  Stream.h
src/Core_WindowEvents/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_TEMP.txt  DisplayModeManager.h  DisplayModeManager_COMMON.cpp  InputEvent.h  InputEvent_KeyEvent.h  InputEvent_MouseButtonEvent.h  InputEvent_MouseMotionEvent.h  InputEvent_MouseWheelEvent.h  InputEvent_ResizeEvent.h  InputEvent_WindowActivationEvent.h  InputManager.cpp  InputManager.h  KeyID.h  KeyState.h  MouseState.h  RenderContext.h  RenderContext_Notes.txt  WindowEvents.h  WindowEvents_COMMON.cpp  WindowEvents_LIB.h  WindowPixelFormat.cpp  WindowPixelFormat.h
src/Example_RendererBaseUsage/: CMakeLists.txt  ExLib_Eigen.h  ExLib_TextureLoader.h  ExLib_WindowEvents.h  Example_EffectCubeMap.h  Example_EffectCubeMapFile.h  Example_EffectFragmentLighting.h  Example_EffectFragmentTexture.h  Example_EffectFragmentTextureSkinning.h  Example_Main.h  Example_MeshBox.h  Example_MeshQuad.h  Example_MeshQuadUpY.h  Example_RenderStates.h  Example_SceneData.h  Example_Texture2D.h  Example_Texture2DFile.h  Example_TextureCube.h  Example_TextureCubeFile.h  Example_TorusMesh.h  RendererBaseUsage_Entry.cpp  RendererBaseUsage_Entry.h  RendererBaseUsage_LIB.h
src/Example_RendererSGUsage/: CMakeLists.txt  ExLib_Eigen.h  ExLib_RendererBaseUsage.h  ExLib_RendererSG.h  ExLib_WindowEvents.h  Example_RendererSGMain.h  RendererSGUsage_Entry.cpp  RendererSGUsage_Entry.h  RendererSGUsage_LIB.h
src/Geometry_BoundCreation/: BoundCreation.cpp  BoundCreation.h  BoundCreation_Copy.cpp  BoundCreation_Helpers.cpp  BoundCreation_LIB.h  BoundCreation_Merging.cpp  BoundCreation_New.cpp  BoundCreation_Transform.cpp  CMakeLists.txt  ExLib_BoundingVolume.h  ExLib_FloatDataAccessor.h  ExLib_QuickHull.h  ExLib_Topology.h
src/Geometry_BoundingVolume/: AABB.cpp  AABB.h  BoundingSphere.h  BoundingVolume.h  BoundingVolume_LIB.h  CMakeLists.txt  OBB.cpp  OBB.h
src/Geometry_Eigen/: CMakeLists.txt  Eigen_LIB.h
src/Geometry_GeometricPrimitives/: CMakeLists.txt  Cone.h  Cylinder.h  GeometricPrimitives.cpp  GeometricPrimitives_LIB.h  Line.h  LineSegment.h  Plane.h  Polygon.h  Polyhedron.h  Quadrilateral.h  Ray.h  Rectangle3D.h  Tetrahedron.h  Triangle.h
src/Geometry_GeometricTests/: BPT_AdditionalTests.cpp  BPT_ClosestPoint.cpp  BPT_DynamicIntersectionTests.cpp  BPT_HeterogenousTests.cpp  BPT_HomogenousTests.cpp  BPT_IntersectingLineRaysSegments.cpp  BPT_TestingPrimitives.cpp  BasicPrimitiveTests.cpp  BasicPrimitiveTests.h  CMakeLists.txt  ExLib_BoundingVolume.h  ExLib_Eigen.h  ExLib_GeometricPrimitives.h  GeometricPrimitives.cpp  GeometricPrimitives.h  GeometricTests_LIB.h
src/IO_SOIL/: SOIL_LIB.h  (+1 more)
(+610 files in other folders)
