CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

Project(Graphics_Cg)

FILE(GLOB NvidiaCg_SRCS *.cpp)
FILE(GLOB NvidiaCg_H *.h)

IF(WIN32)
    SET(NvidiaCg_SRCS ${NvidiaCg_SRCS} ${NvidiaCg_H})
ENDIF(WIN32)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
IF (USE_CG)
    FIND_PACKAGE(Cg)
    IF (CG_FOUND)
        MESSAGE(STATUS "Cg Found: ")
        MESSAGE(STATUS "    CG_INCLUDE_PATH: " ${CG_INCLUDE_PATH})
        MESSAGE(STATUS "    CG_LIBRARY: " ${CG_LIBRARY})

        INCLUDE_DIRECTORIES(${CG_INCLUDE_PATH})
        
        SET(CG_OPENGL_LIBRARIES ${CG_LIBRARY} ${CGGL_LIBRARY})
        SET(EXTRA_LIBS ${EXTRA_LIBS} ${CG_OPENGL_LIBRARIES})
    ENDIF (CG_FOUND)

    IF (CG_FOUND)
        MESSAGE(STATUS "Using Cg")
    ELSE (CG_FOUND)
        OPTION(USE_CG "Use Cg" OFF)
    ENDIF (CG_FOUND)
ENDIF(CG)

ADD_LIBRARY(Graphics_Cg STATIC ${NvidiaCg_SRCS})

