CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Graphics_API_OpenGL)
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})

ADD_DEFINITIONS(-DGLEW_STATIC)

IF(WIN32)
    FIND_PACKAGE(OpenGL)
    SET(EXTRA_LIBS ${OPENGL_LIBRARIES})
ELSE(WIN32)
    IF(APPLE)
        FIND_LIBRARY(COCOA_LIBRARY Cocoa)
        FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
        MARK_AS_ADVANCED (COCOA_LIBRARY OPENGL_LIBRARY)
        SET(EXTRA_LIBS ${COCOA_LIBRARY} ${OPENGL_LIBRARY})
    ELSE(APPLE)
        SET(EXTRA_LIBS GL X11 GLU)
    ENDIF (APPLE)
ENDIF(WIN32)

SET(GLEW_SRCS glew.c glewinfo.c visualinfo.c)
SET(GLEW_HEADERS GL/glew.h)
IF(WIN32)
	SET(GLEW_SRCS ${GLEW_SRCS} ${GLEW_HEADERS})
ENDIF(WIN32)

ADD_LIBRARY(Graphics_API_OpenGL STATIC ${GLEW_SRCS})
TARGET_LINK_LIBRARIES(Graphics_API_OpenGL ${EXTRA_LIBS})
