CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

Project(Core_WindowEvents_MacOSXCocoa)

FILE(GLOB WindowEvents_MacOSXCocoa_SRCS *.mm)
FILE(GLOB WindowEvents_MacOSXCocoa_H *.h)

SET(WindowEvents_MacOSXCocoa_SRCS ${WindowEvents_MacOSXCocoa_SRCS} ${WindowEvents_MacOSXCocoa_H})

IF(APPLE)
    SET(GUI_TYPE MACOSX_BUNDLE)
    FIND_LIBRARY(COCOA_LIBRARY Cocoa)
    FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
    MARK_AS_ADVANCED (COCOA_LIBRARY OPENGL_LIBRARY)
    SET(EXTRA_LIBS ${COCOA_LIBRARY} ${OPENGL_LIBRARY})

ELSE(APPLE)
    SET_SOURCE_FILES_PROPERTIES(${WindowEvents_MacOSXCocoa_SRCS} PROPERTIES HEADER_FILE_ONLY TRUE)
ENDIF(APPLE)

ADD_LIBRARY(Core_WindowEvents_MacOSXCocoa STATIC ${WindowEvents_MacOSXCocoa_SRCS})
TARGET_LINK_LIBRARIES(Core_WindowEvents_MacOSXCocoa ${EXTRA_LIBS})

