CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

Project(Core_WindowEvents_Win32D3D10)

FILE(GLOB WindowEvents_Win32D3D10_SRCS *.cpp)
FILE(GLOB WindowEvents_Win32D3D10_H *.h)

SET(WindowEvents_Win32D3D10_SRCS ${WindowEvents_Win32D3D10_SRCS} ${WindowEvents_Win32D3D10_H})

IF (WIN32 AND USE_DIRECTX10)
ELSE (WIN32 AND USE_DIRECTX10)
    SET_SOURCE_FILES_PROPERTIES(${WindowEvents_Win32D3D10_SRCS} PROPERTIES HEADER_FILE_ONLY TRUE)
ENDIF (WIN32 AND USE_DIRECTX10)



ADD_LIBRARY(Core_WindowEvents_Win32D3D10 STATIC ${WindowEvents_Win32D3D10_SRCS})
TARGET_LINK_LIBRARIES(Core_WindowEvents_Win32D3D10 ${EXTRA_LIBS})

