CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

Project(Core_WindowEvents_Win32D3D9)

FILE(GLOB WindowEvents_Win32D3D9_SRCS *.cpp)
FILE(GLOB WindowEvents_Win32D3D9_H *.h)

SET(WindowEvents_Win32D3D9_SRCS ${WindowEvents_Win32D3D9_SRCS} ${WindowEvents_Win32D3D9_H})

IF (WIN32 AND USE_DIRECTX9)
ELSE (WIN32 AND USE_DIRECTX9)
    SET_SOURCE_FILES_PROPERTIES(${WindowEvents_Win32D3D9_SRCS} PROPERTIES HEADER_FILE_ONLY TRUE)
ENDIF (WIN32 AND USE_DIRECTX9)



ADD_LIBRARY(Core_WindowEvents_Win32D3D9 STATIC ${WindowEvents_Win32D3D9_SRCS})
TARGET_LINK_LIBRARIES(Core_WindowEvents_Win32D3D9 ${EXTRA_LIBS})

