CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

Project(Graphics_RendererBase_D3D10)

FILE(GLOB RendererBase_D3D10_SRCS *.cpp)
FILE(GLOB RendererBase_D3D10_H *.h)

SET(RendererBase_D3D10_SRCS ${RendererBase_D3D10_SRCS} ${RendererBase_D3D10_H})

IF (NOT USE_DIRECTX10)
    SET_SOURCE_FILES_PROPERTIES(${RendererBase_D3D10_SRCS} PROPERTIES HEADER_FILE_ONLY TRUE)
ENDIF (NOT USE_DIRECTX10)    

ADD_LIBRARY(Graphics_RendererBase_D3D10 STATIC ${RendererBase_D3D10_SRCS})

